# papersurvey_tool

./: README.md  pyproject.toml
notebooks/: 01_prompt_engineering.ipynb  02_chunking_strategies.ipynb  03_llm_example.ipynb  04_common_evaluation_techniques.ipynb  05_qag_evaluation.ipynb  06_google_scholar_search.ipynb  evaluate_summariser.ipynb  evaluation_data_generation.ipynb  google_scholar_search.ipynb  langchain_example.ipynb  llm_example.ipynb  prompt_engineering.ipynb  trulens_eval.ipynb
src/evaluation/: __init__.py  evaluator.py  prompts.py  scoring.py
src/example_package/: default.sqlite  prompts.py  summariser.py
src/summarisation/: prompts.py  summariser.py  utils.py
