[project]
name = ""
description = ""
dynamic = ["version"]
authors = [
    {name = "Alexis Wang", email = "alexiswang0508@gmail.com"},
]
dependencies = [
    "openai>=1.3.3",
    "langchain>=0.0.338",
    "pypdf>=3.17.1",
    "chromadb>=0.4.17",
    "pysqlite3-binary>=0.5.2.post1",
    "tiktoken>=0.5.1",
    "sentence-transformers>=2.2.2",
    "torch==2.0.0",
    "bs4>=0.0.1",
    "ipykernel>=6.27.1",
    "cohere>=4.39",
    "trulens-eval>=0.19.1",
    "llama-index>=0.9.15.post2",
    "ipywidgets>=8.1.1",
    "streamlit>=1.29.0",
    "streamlit-javascript>=0.1.5",
    "serpapi>=0.1.5",
    "google-search-results>=2.4.2",
]
requires-python = ">=3.9,<3.12,!=3.9.7"  
readme = "README.md"
license = {text = "None"}
version = "0.1.0"

[tool.pdm.dependencies]
torch = ">=2.0.0, !=2.0.1, !=2.1.0"